@@ -1,5 +1,10 @@
 2007-11-21  Stefan Kost  <ensonic@users.sf.net>
 
+	* src/Makefile.am:
+	  Use local version to link against when building bmltest_* binaries.
+
+2007-11-21  Stefan Kost  <ensonic@users.sf.net>
+
 	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
 	  Free the machine-iface causes a double free here. Disable for now.
 
